src/test/ui/const-generics/const_evaluatable_checked/unused_expr.stderr
error: overly complex generic constant
  --> $DIR/unused_expr.rs:4:34
   |
LL | fn add<const N: usize>() -> [u8; { N + 1; 5 }] {
   |                                  ^^-----^^^^^
   |                                    |
   |                                    dead code
   |
   = help: consider moving this anonymous constant into a `const` function

error: overly complex generic constant
  --> $DIR/unused_expr.rs:9:34
   |
LL | fn div<const N: usize>() -> [u8; { N / 1; 5 }] {
   |                                  ^^-----^^^^^
   |                                    |
   |                                    dead code
   |
   = help: consider moving this anonymous constant into a `const` function

error: overly complex generic constant
  --> $DIR/unused_expr.rs:16:38
   |
LL | fn fn_call<const N: usize>() -> [u8; { foo(N); 5 }] {
   |                                      ^^------^^^^^
   |                                        |
   |                                        dead code
   |
   = help: consider moving this anonymous constant into a `const` function

error: aborting due to 3 previous errors

